poprawiono wielkosc zdjec

--- a/PassportDetailsTEB/MainPage.xaml
+++ b/PassportDetailsTEB/MainPage.xaml
@@ -26,11 +26,11 @@
                 </StackLayout>
             </Frame>
 
-            <Image x:Name="ImageZdjecie" Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" HeightRequest="180" Aspect="AspectFit" Source="nullzdjecie.jpg" />
-            <Image x:Name="ImageOdcisk" Grid.Row="0" Grid.Column="3" Grid.RowSpan="3" HeightRequest="180" Aspect="AspectFit" Source="odcisk444.png"/>
+            <Image x:Name="ImageZdjecie" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" HeightRequest="270" Aspect="AspectFit" Source="nullzdjecie.jpg" />
+            <Image x:Name="ImageOdcisk" Grid.Row="1" Grid.Column="3" Grid.RowSpan="3" HeightRequest="270" Aspect="AspectFit" Source="odcisk444.png"/>
 
             <Button Text="OK" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" BackgroundColor="#F0FFFF" 
-                    Clicked="OnOkButtonClicked" HorizontalOptions="Center" Padding="150, 0" VerticalOptions="Center"/>
+                    Clicked="OnOkButtonClicked" HorizontalOptions="Center" Padding="150, 0" VerticalOptions="End"/>
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
